#--------------------------------------------------------------------
# configure.in for xsif
#
# Authors:  Jean-Francois Ostiguy
#           ostiguy@fnal.gov
#
# Process this file with autoconf to produce a configure script.
#
#-------------------------------------------------------------------

AC_INIT([xsif],[1.0])
AC_CONFIG_SRCDIR([src/XSIFFactory.cc])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR(config)

#AC_PROG_LEX  
#AC_PROG_YACC 

AM_INIT_AUTOMAKE
AM_CONFIG_HEADER([config.h])
AC_CONFIG_HEADERS


## -------------------------------------------------
## Compiler flags - we require g++
##
##--------------------------------------------------

if test ${CFLAGS}   ;then cflags_is_set=set;   fi 
if test ${CXXFLAGS} ;then cxxflags_is_set=set; fi 

AC_PROG_CC([gcc])
AC_PROG_CXX([g++])
AC_PROG_LIBTOOL

dnl The AC_PROG_xx macros set CFLAGS and CXXFLAGS 
dnl to a default value if they are not set. 
dnl We keep them unset ! 

if test ! ${cflags_is_set};   then CFLAGS="";   fi
if test ! ${cxxflags_is_set}; then CXXFLAGS=""; fi


AC_ARG_ENABLE(implicit-templates, AC_HELP_STRING([--enable-implicit-templates],[ Enable implicit template instantiation for portability ]), 
	      TEMPLATEFLAGS="",
              LOCALDEFS="-DMXYZPTLK_EXPLICIT_TEMPLATES -DBASICTOOLKIT_EXPLICIT_TEMPLATES ${LOCALDEFS}"; TEMPLATEFLAGS=-fno-implicit-templates )


AC_ARG_ENABLE(debugging, AC_HELP_STRING([--enable-debugging],[set flags for debugging] ),,)

if test "x$val_debugging" = "xyes"; then
  OPTFLAGS="-pipe -O0 -g3"
else
  OPTFLAGS="-pipe -g -O3 -mtune=pentium4" 
fi


#---------------------------------------------------------------------
# BOOST
#---------------------------------------------------------------------

BOOST_INC="/usr/include/boost"
BOOST_LIB="/usr/lib"

AC_ARG_VAR([BOOST_INC],    [BOOST include directory])
if test ${BOOST_INC} && test -r ${BOOST_INC}; then
        AC_MSG_RESULT([Location specified: ${BOOST_INC}])
else
	AC_CHECK_HEADER(shared_ptr.hpp,,[
		AC_MSG_ERROR([BOOST includes not found, please define BOOST_INC.])
	])
fi

AC_ARG_VAR([BOOST_LIB],    [BOOST library directory])
if test ${BOOST_LIB} && test -r ${BOOST_LIB}; then
        AC_MSG_RESULT([Location specified: ${BOOST_LIB}])
else
	AC_CHECK_FILE([libboost_python.so],,[
		AC_MSG_ERROR([BOOST libary not found, please define BOOST_LIB.])
	])
fi

#

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_CHECK_FUNCS([floor pow sqrt strspn strstr])


if test ${BOOST_INC}; then  BOOST_INC="-I"${BOOST_INC}; fi

AC_SUBST(BOOST_INC) 
AC_SUBST(TEMPLATEFLAGS) 
AC_SUBST(OPTFLAGS) 
AC_SUBST(LOCALDEFS) 

AM_CONDITIONAL(IMPLICIT_TEMPLATES, test "${val_implicit_templates}" = "yes")

AC_CONFIG_FILES([src/Makefile Makefile])
AC_OUTPUT
